--- a/paper/main.tex
+++ b/paper/main.tex
@@ -54,7 +54,8 @@
 % \end{abstract}
 
 \begin{abstract}
-    We investigate the behavior of numerical optimization schemes employed to find local minima of nonlinear energy functionals. In phase-field theories of brittle fracture, crack initiation,  growth, and path selection CAN BE CAPTURED by an energetic principle acting on a nonconvex energy functional. The lack of convexity of the governing energy poses difficulties for monolithic solvers that aim to compute minimisers. In this paper, we numerically investigate the effectiveness of quasi-Newton algorithms as an alternative to conventional Newton-Raphson solvers. These algorithms improve convergence by constructing a positive definite approximation to the full Hessian of the functional, YET MISS BIFURCATION POINTS AND STABILITY TRANSITIONS. Our study focuses on one-dimensional phase-field fracture models of brittle thin films on an elastic foundation. Within this framework, we CONSTRUCT AN equilibrium map that represents all stable and unstable equilibrium states as a function of the external load, USING branch-following bifurcation techniques. When the solution returned by the solver is compared to the equilibrium map, its OBSERVABILITY can be ASCERTAINED. Our main finding is that quasi-Newton algorithms fail to select stable evolution paths without EXACT full second variation information. TO SOLVE THIS, WE PERFORM A spectral analysis of the full Hessian, PROVIDING OPTIMAL perturbATIONS THAT enable quasi-Newton methods to FOLLOW a stable and potentially unique path for crack evolution.
+    We investigate the behavior of numerical optimization schemes employed to find local minima of nonlinear energy functionals. In phase-field theories of brittle fracture, WE ARE INTERESTED IN crack initiation,  growth, and path selection. The lack of convexity of the governing energy poses difficulties for monolithic solvers that aim to compute minimisers. IN SOME CIRCUMSTANCES, HOWEVER, ANALYTIC SOLUTIONS EXIST FOR COMPLEX ENERGY LANDSCAPES. In this paper, we numerically investigate the effectiveness of quasi-Newton algorithms as an alternative to conventional Newton-Raphson solvers. These algorithms improve convergence by constructing a positive definite approximation to the full Hessian of the functional, BARGANING IMPROVED CONVERGENCE WITH THE RISK OF MISSING BIFURCATION POINTS AND ENERGY-STABILITY TRANSITIONS. Our study focuses on one-dimensional phase-field fracture models of brittle thin films on an elastic foundation. Within this framework, we CONSTRUCT AN equilibrium map that represents all stable and unstable equilibrium states as a function of the external load, USING branch-following bifurcation techniques. When the solution returned by the solver is compared to the equilibrium map, its OBSERVABILITY can be ASCERTAINED. Our main finding is that quasi-Newton algorithms fail to select stable evolution paths without EXACT full second variation information. TO SOLVE THIS, WE PERFORM A spectral analysis of the full Hessian, PROVIDING OPTIMAL perturbATIONS THAT enable quasi-Newton methods to FOLLOW a stable and potentially unique path for crack evolution.
+    WHAT CAN BE CAPTURED by an energetic principle acting on a nonconvex energy functional?
 \end{abstract}
 
 % \begin{abstract}
