--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -51,7 +51,7 @@
 Numerous physical phenomena in materials science, such as crystal plasticity, phase transitions, twinning~\cite{Clayton2011-xq}, and fracture ~\cite{Baldelli2014-ho,Baldelli2021-gc}, can be described by non-linear energy functionals at the mesoscale. \comment[id=ALB]{Unclear}{These systems exhibit evolution towards minimizing the energy functional}, of which equilibrium configurations are critical states that satisfy boundary conditions. This optimization process is achieved through incremental minimization of a free energy functional. Outcomes of such calculations are elastic fields
 (e.g., displacement, strain, stress, and strain energy density) and the order parameters depending on the model considered. The corresponding microstructures are crucial to understand and improve the mechanical behavior of materials.
 
-In the realm of material science, one encounters various phenomena governed by intricate mathematical formulations. Notably, there are two distinct types of functionals at play here. The first one involves functionals of type $\Psi(\mathbf u)$ non-convex in its argument, the displacement field $\mathbf u$. These functionals are frequently encountered in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, a second type of functionals, denoted as $\Psi(\mathbf u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
+In the realm of material science, one encounters various phenomena governed by intricate mathematical formulations. Notably, there are two distinct types of functionals at play here. The first one involves functionals of type $\Psi(\mathbf u)$ non-convex in its argument, the displacement field $\mathbf u$. These functionals are frequently encountered in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, a second type of functionals, denoted as $\Psi(\mathbf u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ IS AN INTERNAL VARIABLE THAT elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
 
 In both cases, one deals\comment[id=ALB]{the problem is to find stable configurations that achieve min} with the problem of finding  stable configurations that  can be expressed as $\min_{\boldsymbol{u}} \Psi(\boldsymbol{u})$ or $\min_{\boldsymbol{u},\alpha} \Psi(\boldsymbol{u},\alpha)$.  In a quasi-static loading protocol, the system navigates metastable states\comment[id=ALB]{statement is unclear, is this a hypothesis?}, representing local minima of the energy. 
 It is known that continuous branches of equilibria can bifurcate and intersect as well as terminate at points where the state's stability is lost. 
@@ -63,7 +63,7 @@ During an isolated switching event, new equilibrium branches can be determined u
 The study of bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of the possible local behaviors at bifurcations points in terms of linearised (canonical) representations, allowing for easier classification and analysis of the bifurcation types~\cite{}. 
 For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem describe the scenario under which a system of equations can realise more than one smooth solution.
 Less clear is the picture in presence of nonconvexities and nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities which model the trajectory of a system in phase space. In these scenarios, as noted in the seminal work~\cite{hill}, the study of bifurcation and stability is not equivalent to the existence of solutions infinitesimally near critical points in an arbitrary neighborhoods of the control parameters.
-bazant, ....
+bazant, ....}
 
 Here, 
 % instead of seeking existence of solutions  (which amounts to the invertibility of equilibrium system), 
@@ -71,10 +71,9 @@ a bifurcation condition along the system's evolution parametrised by the control
 % Namely, the critical point is degenerate in that its second derivative is not invertible.
 % (local) failure of the implicit function theorem.
 % For an evolution, 
-In this work, we aim at characterising the stability (or observability) of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition, in a one-dimensional system that shows pattern formation and complex branch transitions. In our context, conditions for uniqueness of the evolution path (or its non-bifurcation) reduce to the uniqueness of solutions to a boundary value problem defined for the \emph{rates of evolution}, or equivalently, the positive definiteness of its bilinear operator.
+In this work, we aim at characterising the stability (or observability) of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition, in a one-dimensional system that shows pattern formation and complex branch transitions. In our context, conditions for uniqueness of the evolution path (or its non-bifurcation) reduce to the uniqueness of solutions to a boundary value problem defined for the \emph{rates of evolution}, or equivalently, the positive definiteness of its bilinear operator IN A VECTOR SPACE.
 % bifurcation points are the critical loadings at which there is a multiplicity of solutions to the rate problem 
 % ----------
-}
 
 STABILITY IS A DIFFERENT BUSINESS
 
@@ -83,14 +82,14 @@ The loss of stability of energy-minimizing states which are stationary points of
 The absence of analytical solutions in strongly non-linear settings requires resorting to numerical methods for computing and predicting equilibrium configurations that correspond to the minima of the energy functional. The minimization process involves discretizing the continuum fields onto a computational grid using methods such as finite elements, finite differences, or spectral techniques. Afterwards, an iterative solver is employed to seek minimum energy states, with options including the Newton-Raphson method~\cite{Wick2017-bo}, fixed-point iteration~\cite{Chen2019-mn,Kirkesaether_Brun2020-wa,Storvik2021-cd}, line-search-based descent algorithms like steepest descent or conjugate gradient~\cite{Stiefel1952-fw,Dai1999-hz}, quasi-Newton methods such as the highly-efficient Limited-memory Broyden-Fletcher-Goldfarb-Shanno (\textsc{L-BFGS}) approach~\cite{Liu1989-kl}, which involves approximating the Hessian matrix, or more recent advancements like the fast inertial relaxation engine (\textsc{FIRE})~\cite{Guenole2020-tc}. These solvers iteratively refine solutions starting from an initial guess provided as part of the solution procedure. Despite their widespread application, there remains a lack of clear understanding regarding the performance of these algorithms and their effectiveness in locating local minima. 
 
 
-This work centers on the numerical computation of evolutionary solutions for phase-field fracture models. Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, indicative of the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}. Within this study, we will consider two one-dimensional phase-field fracture models for a brittle thin film on two types of substrates. The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}.  Despite the one-dimensional setting we adopt here, which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima, eliminating the need for two-dimensional analysis\comment[id=ALB]{Unclear}. Moreover, in the absence of irreversibility constraint, bifurcation points from homogeneous solution can be calculated analytically and by employing continuation techniques, all solutions connected to the homogeneous branch and their stability can be identified. 
+This work centers on the numerical computation of evolutionary solutions for phase-field fracture models. Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, indicative of the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}. Within this study, we will consider two one-dimensional phase-field fracture models for a brittle thin film on two types of substrates. The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}.  Despite the one-dimensional setting we adopt here, which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima, POSTPONING the need for two-dimensional analysis\comment[id=ALB]{Unclear}. Moreover, in the absence of AN irreversibility constraint, bifurcation points from homogeneous solution can EASILY be calculated analytically and NUMERICALLY, by employing continuation techniques, all solutions connected to the homogeneous branch and their stability can be identified. 
 In this simple setting, we can then monitor the solutions returned from  the different  numerical optimization techniques. Our findings indicate that under quasi-static conditions, line-search-based descent algorithms not relying on full Hessian can fail to detect expected branch-switching events and may return solutions that persist on \added[id=ALB]{unstable} branches, thus lacking physical relevance. 
 We propose a remedy to this situation which involves utilizing information from the Hessian of the functional when it becomes singular. 
 \added[id=ALB]{OPEN SYSTEMS, BIOLOGICAL APPLICATION, HEALING, REVERSIBLE DAMAGE} 
-To highlight the role of the constraint of irreversibility, we discuss this scenario case separately.
-We study of stability of equilibria in two settings, namely i) that in which damage is reversible and all small perturbations are admissible, and ii) the case where damage is subject to an irreversibility constraint, which results in a constrained perturbation space. The first scenario corresponds to the case in which negative variations of damage are allowed and indeed may occur - if convenient from an energetic viewpoint. The second setting, instead, considers damage as an irreversible process by enforcing an irreducible one-directional pointwise growth constraint.
+To highlight the role of the constraint of irreversibility, we discuss this scenario case separately DISTINGUISHING two settings, namely i) that in which damage is reversible and all small perturbations are admissible, and ii) the case where damage is subject to an irreversibility constraint, which results in a constrained perturbation space, TOPOLOGICALLY DIFFERENT. The first scenario corresponds to the case in which negative variations of damage are allowed and indeed may occur - if convenient from an energetic viewpoint. The second setting, instead, considers damage as an irreversible process by enforcing an irreducible one-directional pointwise growth constraint.
 
 The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
 
 \paragraph{Notation.} \added[id=ALB]{Standard notation for Sobolev spaces, derivtives, indices, ..., subscripted $t$ means $t$-parametrised quantities, superscripted $k$ means $k$-th iterate of an iterative algorithm. States $y_t, X, X^*$, vectors, matrices, ..., Sobolevs spaces of scalar functions on unit interval $H^1(0, 1)$}
-PRIME SIGN, SPATIAL DERIVATIVE WHEN APPLIED TO FIEELDS OR QUANTITY RELATED TO THE SUBSTRATE WHEN APPENDED TO MATERIAL CONSTANTS
+PRIME SIGN, SPATIAL DERIVATIVE WHEN APPLIED TO FIEELDS OR QUANTITY RELATED TO THE SUBSTRATE WHEN APPENDED TO MATERIAL CONSTANTS,
+AMERICAN  OR BRITISH ENGLISH?
